--- a/src/routes/Home/style.scss
+++ b/src/routes/Home/style.scss
@@ -1,5 +1,6 @@
 .home {
-  h1 {
-    color: red;
-  }
+  background-image: url("../../assets/headerbg.png");
+  background-size: cover;
+  // width: 100vw;
+  height: 100vh;
 }
