--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -1,5 +1,7 @@
 .header {
   width: 100%;
+  height: 100vh;
+  overflow: visible;
   display: flex;
   justify-content: space-between;
   margin: auto;
