--- a/src/components/Navbar/style.scss
+++ b/src/components/Navbar/style.scss
@@ -8,6 +8,7 @@
   border-bottom: 5px solid rgba(206, 201, 231, 1);
 
   &-left {
+    font-family: "Lobster Two", cursive;
     font-weight: bold;
     font-size: 30px;
     padding: 10px;
@@ -17,7 +18,7 @@
     list-style-type: none;
     display: flex;
     text-transform: uppercase;
-    font-weight: bold;
+    // font-weight: bold;
     letter-spacing: 1px;
     margin: 10px;
 
@@ -25,7 +26,7 @@
       margin: 0px 10px;
       display: block;
       padding: 10px 20px;
-      border-radius: 5px;
+      // border-radius: 5px;
       background-color: #423f81;
       justify-content: space-between;
       cursor: pointer;
